--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -5,9 +5,10 @@ block head
   script(src='/lib/jquery-3.3.1.min.js')
   script(src='/lib/popper.js')
   script(src='/lib/bootstrap/js/bootstrap.js')
+  script(src='/lib/lodash.js')
   script(src='/lib/vue.js')
   script(src='/socket.io/socket.io.js')
-  script(src='/js/modbus-client.js')
+
 
   script
     | var settings=
@@ -15,7 +16,10 @@ block head
     | ;
 
 block content
-  .container-fluid
+  .container-fluid#modbus-app
     h1 Modbus Client
-    .row
+    modbus-list(v-bind:list='view')
+
+  script(src='/js/modbus-client.js')
+
 
