--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -18,7 +18,8 @@ block head
 block content
   .container-fluid#modbus-app
     h1 Modbus Client
-    modbus-list(v-bind:list='devices[0].elements')
+    modbus-device(v-bind:device='devices[0]')
+
 
   script(src='/js/modbus-client.js')
 
