Displaying different formats, two samples added

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -19,6 +19,7 @@ block content
   .container-fluid#modbus-app
     h1 Modbus Client
     modbus-device(v-bind:device='devices[0]')
+    modbus-device(v-bind:device='devices[1]')
 
 
   script(src='/js/modbus-client.js')
