--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -1,7 +1,8 @@
 extends layout
 
 block head
-  link(rel='stylesheet', href='lib//bootstrap/css/bootstrap.min.css')
+  link(rel='stylesheet', href='lib/bootstrap/css/bootstrap.min.css')
+  link(rel='stylesheet', href='css/modbus-client.css')
   script(src='/lib/jquery-3.3.1.min.js')
   script(src='/lib/popper.js')
   script(src='/lib/bootstrap/js/bootstrap.js')
@@ -18,8 +19,7 @@ block head
 block content
   .container-fluid#modbus-app
     h1 Modbus Client
-    modbus-device(v-bind:device='devices[0]')
-    modbus-device(v-bind:device='devices[1]')
+    modbus-devices(v-bind:devices='devices')
 
 
   script(src='/js/modbus-client.js')
