Added page title

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -18,7 +18,7 @@ block head
 
 block content
   .container-fluid#modbus-app
-    h1 Modbus Client
+    h1 {{settings.config.title}}
     modbus-devices(v-bind:devices='devices')
 
 
