Listing device params

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -38,6 +38,24 @@ block content
     div(v-if='view === 0')
       modbus-devices(v-bind:devices='devices')
     div(v-if='view === 1')
+      h1 Device Info
+      div(v-for='device in devices' v-bind:key='device.id')
+        h3 {{device.description}}
+        table.table
+          tbody
+            tr
+              td URL
+              td {{device.server.url}}
+            tr
+              td Port
+              td {{device.server.port}}
+            tr
+              td Collection Interval [ms]
+              td {{device.interval}}
+            tr
+              td Elements
+              td {{device.elements.length}}
+
 
   script(src='/js/modbus-client.js')
 
