--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -36,8 +36,10 @@ block content
 
 
     div(v-if='view === 0')
+      // List with the devices and the registers, implemented as components
       modbus-devices(v-bind:devices='devices')
     div(v-if='view === 1')
+      // List with the devices and their properties, not using components
       h1 Device Info
       div(v-for='device in devices' v-bind:key='device.id')
         h3 {{device.description}}
