--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -43,9 +43,9 @@ block content
           .card-header {{device.description}}
           .card-body
             .row(v-for='item in device.elements' v-bind:key='item.id')
-              .col-sm-6.col-md-6.item-description(v-on:click='edit(item)' v-bind:class="{'error-level':item.isError, 'warning-level':item.isWarning, 'normal-level':(item.isWarning === false && item.isError === false)}") {{item.description}}
-              .col-sm-2.col-md-2(v-bind:class="{'error-level':item.isError, 'warning-level':item.isWarning, 'normal-level':(item.isWarning === false && item.isError === false)}") {{item.address}}
-              .col-sm-4.col-md-4(v-bind:class="{'error-level':item.isError, 'warning-level':item.isWarning, 'normal-level':(item.isWarning === false && item.isError === false)}") {{item.value}}
+              .col-sm-6.col-md-6.item-description(v-on:click='edit(item)' v-bind:class="{'alarm-level':item.isAlarm, 'warning-level':item.isWarning, 'normal-level':(item.isWarning === false && item.isAlarm === false)}") {{item.description}}
+              .col-sm-2.col-md-2(v-bind:class="{'alarm-level':item.isAlarm, 'warning-level':item.isWarning, 'normal-level':(item.isWarning === false && item.isAlarm === false)}") {{item.address}}
+              .col-sm-4.col-md-4(v-bind:class="{'alarm-level':item.isAlarm, 'warning-level':item.isWarning, 'normal-level':(item.isWarning === false && item.isAlarm === false)}") {{item.value}}
 
       div(v-if='view === 1')
         // List with the devices and their properties
@@ -71,11 +71,21 @@ block content
         table.table
           tbody
             tr
-              td Current value
-              td {{currentItem.value}}
+              td(v-bind:class="{'alarm-level':currentItem.isAlarm, 'warning-level':currentItem.isWarning, 'normal-level':(currentItem.isWarning === false && currentItem.isAlarm === false)}") Current value
+              td(v-bind:class="{'alarm-level':currentItem.isAlarm, 'warning-level':currentItem.isWarning, 'normal-level':(currentItem.isWarning === false && currentItem.isAlarm === false)}") {{currentItem.value}}
             tr
               td Parser
               td {{currentItem.parser}}
+            tr(v-if='hasWarningLevels(currentItem)')
+              td Warning Levels
+              td
+                div(v-if='currentItem.levels.warningLow > (-1 * Number.MAX_VALUE)') Low: {{currentItem.levels.warningLow}} &nbsp;
+                div(v-if='currentItem.levels.warningHigh < Number.MAX_VALUE') High: {{currentItem.levels.warningHigh}}
+            tr(v-if='hasAlarmLevels(currentItem)')
+              td Alarm Levels
+              td
+                div(v-if='currentItem.levels.alarmLow > (-1 * Number.MAX_VALUE)') Low: {{currentItem.levels.alarmLow}}&nbsp;
+                div(v-if='currentItem.levels.alarmHigh < Number.MAX_VALUE') High: {{currentItem.levels.alarmHigh}}
             tr
               td Address
               td {{currentItem.address}}
