--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -39,69 +39,15 @@ block content
 
       div(v-if='view === 0')
         // List with the devices and the registers
-        .card.device(v-for='device in devices' v-bind:device='device')
-          .card-header {{device.description}}
-          .card-body
-            .row(v-for='item in device.elements' v-bind:key='item.id')
-              .col-sm-6.col-md-6.item-description(v-on:click='edit(item)' v-bind:class="{'alarm-level':item.isAlarm, 'warning-level':item.isWarning, 'normal-level':(item.isWarning === false && item.isAlarm === false)}") {{item.description}}
-              .col-sm-2.col-md-2(v-bind:class="{'alarm-level':item.isAlarm, 'warning-level':item.isWarning, 'normal-level':(item.isWarning === false && item.isAlarm === false)}") {{item.address}}
-              .col-sm-4.col-md-4(v-bind:class="{'alarm-level':item.isAlarm, 'warning-level':item.isWarning, 'normal-level':(item.isWarning === false && item.isAlarm === false)}") {{item.value}}
+        include view-main.pug
 
       div(v-if='view === 1')
         // List with the devices and their properties
-        h1 Device Info
-        div(v-for='device in devices' v-bind:key='device.id')
-          h3 {{device.description}}
-          table.table
-            tbody
-              tr
-                td URL
-                td {{device.server.url}}
-              tr
-                td Port
-                td {{device.server.port}}
-              tr
-                td Collection Interval [ms]
-                td {{device.interval}}
-              tr
-                td Elements
-                td {{device.elements.length}}
+        include view-devices.pug
+
       div(v-if='view === 2')
-        h2 {{currentItem.description}}
-        table.table
-          tbody
-            tr
-              td(v-bind:class="{'alarm-level':currentItem.isAlarm, 'warning-level':currentItem.isWarning, 'normal-level':(currentItem.isWarning === false && currentItem.isAlarm === false)}") Current value
-              td(v-bind:class="{'alarm-level':currentItem.isAlarm, 'warning-level':currentItem.isWarning, 'normal-level':(currentItem.isWarning === false && currentItem.isAlarm === false)}") {{currentItem.value}}
-            tr
-              td Parser
-              td {{currentItem.parser}}
-            tr(v-if='hasWarningLevels(currentItem)')
-              td Warning Levels
-              td
-                div(v-if='currentItem.levels.warningLow > (-1 * Number.MAX_VALUE)') Low: {{currentItem.levels.warningLow}} &nbsp;
-                div(v-if='currentItem.levels.warningHigh < Number.MAX_VALUE') High: {{currentItem.levels.warningHigh}}
-            tr(v-if='hasAlarmLevels(currentItem)')
-              td Alarm Levels
-              td
-                div(v-if='currentItem.levels.alarmLow > (-1 * Number.MAX_VALUE)') Low: {{currentItem.levels.alarmLow}}&nbsp;
-                div(v-if='currentItem.levels.alarmHigh < Number.MAX_VALUE') High: {{currentItem.levels.alarmHigh}}
-            tr
-              td Address
-              td {{currentItem.address}}
-            tr
-              td Length
-              td {{currentItem.length}}
-            tr
-              td Type
-              td {{currentItem.type}}
-            tr
-              td Read Only
-              td {{currentItem.readOnly}}
-            tr
-              td Device
-              td {{getDeviceForElement(currentItem).description}}
-        button.btn.btn-primary(type='button' v-on:click='view=0') back
+        // Show details about an element
+        include view-element.pug
 
 
   script(src='/js/modbus-client.js')
